After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 643843 - Error with CBZ documents and left bracket
Error with CBZ documents and left bracket
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: backends
git master
Other All
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
: 699011 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-03-04 05:40 UTC by Dennis Sheil
Modified: 2015-12-02 14:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix for special characters in the path to a cbz file (896 bytes, patch)
2015-07-28 21:38 UTC, Jürn Brodersen
committed Details | Review
cbz for testing (24.00 KB, application/x-compressed-tar)
2015-07-28 21:40 UTC, Jürn Brodersen
  Details

Description Dennis Sheil 2011-03-04 05:40:26 UTC
This problem is currently in trunk.  If a CBZ file is opened up, and is contained in a directory with a left bracket - [ - in it, then evince will say the document only has empty pages.

This bugs is related to bug #619248.  If I comment out the case for left bracket in comics_regex_quote, then the file loads fine.

Prior to a commit to fix this should, we should test various possibilities for left bracket and right bracket in:
* directory names
* file names, and in 
* the file names within the zipped cbz file.

This was found in Ubuntu's evince package, but I have tested it in current git trunk head as well

https://bugs.launchpad.net/ubuntu/+source/evince/+bug/724429
Comment 1 Germán Poo-Caamaño 2013-02-17 06:20:44 UTC
The quotation problem seems to be fixed in
http://git.gnome.org/browse/evince/commit/?id=b47844

Please, feel free to re-open this bug if you still can reproduce the problem
and attach (or point to) a test case.
Comment 2 Dennis Sheil 2013-02-17 17:55:50 UTC
If I said the problem was in the trunk on March 4th, 2011, how would a commit from June of 2010 seem to have fixed it?

The problem can still be reproduced in current trunk.  It affects every CBZ file which I have tried, so any CBZ file can be pointed to as a test case.  To choose a random one, this is a CBZ file - https://ia600409.us.archive.org/28/items/CoryDoctorowsFuturisticTalesOfTheHereAndNow/Cory_Doctorows_Futuristic_Tales_of_the_Here_and_Now_CBZ.cbz .

Problem reproduction can be done by the method I mention above - create a subdirectory with a left bracket ( [ ) in it, put the CBZ file in the subdirectory, then attempt to open the file ("evince sub[dir/file.cbz").  Evince will say the document only has empty pages.
Comment 3 Germán Poo-Caamaño 2013-02-18 00:20:05 UTC
(In reply to comment #2)
> If I said the problem was in the trunk on March 4th, 2011, how would a commit
> from June of 2010 seem to have fixed it?

Simple.  Sleep deprivation :-)
Comment 4 Germán Poo-Caamaño 2013-06-15 08:31:57 UTC
*** Bug 699011 has been marked as a duplicate of this bug. ***
Comment 5 Jürn Brodersen 2015-07-28 21:38:44 UTC
Created attachment 308340 [details] [review]
Fix for special characters in the path to a cbz file

This should solve the problem with folder names that include: "[\*'?"
Comment 6 Jürn Brodersen 2015-07-28 21:40:21 UTC
Created attachment 308341 [details]
cbz for testing
Comment 7 Carlos Garcia Campos 2015-12-02 14:56:43 UTC
Comment on attachment 308340 [details] [review]
Fix for special characters in the path to a cbz file

Pushed, thanks!