comics: Fixed special characters in path to cbz

https://bugzilla.gnome.org/show_bug.cgi?id=643843